Mon May 11 21:40:25 MEST 1998 Sven Neumann <sven@gimp.org>

	* updated print plug-in	

Fri May  8 20:51:24 PDT 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/script-fu/script-fu-console.c: workaround for text
	widget crash from Owen

Thu May  7 16:32:15 PDT 1998 Manish Singh <yosh@gimp.org>

	* gimptool.in: added --install and --install-admin options
	to build and install a plug-in automagically

Thu May  7 15:24:31 EDT 1998  Matthew Wilson <msw@gimp.org>

	* app/fileops.c: more changes to fileselection

Tue May  5 11:40:28 PDT 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/psd/psd.c: updates from Adam

	* plug-ins/script-fu/scripts/text-circle.scm: new version

Mon May  4 21:24:03 PDT 1998 Manish Singh <yosh@gimp.org>

	* Made 0.99.29 release

Mon May  4 19:32:54 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/plug_in.c: make repeat last and re-show plugin menu
	sensitive to image type

Mon May  4 04:12:54 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: define and export version number parts. Check for
	gtk 1.0.1

	* gimptool.in: do some arg check for --build

	* app/fileops.c: handle file overwrite dialog too
	
Sun May  3 22:10:05 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* app/fileops.c: make fileselectors insensitive during
	loading and saving

Sun May  3 00:24:31 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/channels_dialog.c: minimalistic change to the interface,
	make it's possible to set the channel opacity to 100.0%
	(was 99.0% before)

Sat May  2 14:31:46 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/about_dialog.c
	* app/app_procs.c
	* app/main.c: use GIMP_VERSION from config.h now

	* gimptool made to ease plug-in development and installation

Sat May  2 16:10:05 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* app/channels_dialog.c: removed my broken fix, put in a fix
	that works

Sat May  2 15:20:54 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* app/channels_dialog.c: check to be sure that the gimage still